app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sise
spec:
  selector:
    app: sise
  ports:
    - port: 80
      targetPort: 9876
